--- a/todo.html
+++ b/todo.html
@@ -6,6 +6,7 @@
     <script src='js/lib/underscore.js'></script>
     <script src='js/lib/backbone.js'></script>
     <script src='js/lib/backbone.localStorage.js'></script>
+    <script src='js/todo.js'></script>
   </head>
   <body>
   </body>
