--- a/todo.html
+++ b/todo.html
@@ -9,5 +9,15 @@
     <script src='js/todo.js'></script>
   </head>
   <body>
+    <div id="todo-app">
+      <header>
+        <input id="new-todo" type="text" placeholder="What you gonna do?">
+      </header>
+      <section id="main">
+        <ul id="todo-list"></ul>
+      </section>
+      <footer>
+      </footer>
+    </div>
   </body>
 </html>
